# multi-distributor

./: .gitignore  Anchor.toml  Cargo.toml  DEPLOY.md  Dockerfile  MERKLE_TREES.md  README.md  docker-compose.yaml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: deploy-image.yml  mainnet-beta.yml  manual-devnet-deploy.yaml  master.yml  release-program.yaml
api/: Cargo.toml
api/src/: router.rs
cli/: Cargo.toml
cpi-example/: .gitignore  Anchor.toml  README.md  package.json  tsconfig.json
cpi-example/programs/bad-debt-example/: Cargo.toml
cpi-example/programs/bad-debt-example/src/: lib.rs
cpi-example/scripts/: claim.ts  common.ts  initialize.ts  withdraw.ts
cpi-example/tests/: bad-debt-example.test.ts  helpers.ts
deploy/: .env.example  README.md  docker-compose.yaml
merkle-tree/: convert_dfx_users_to_merkle.py
merkle-tree/csv/: output.csv
merkle-tree/src/: airdrop_merkle_tree.rs  csv_amount_unit.rs  error.rs  lib.rs  tree_node.rs
merkle-tree/test_fixtures/: input.csv  output.csv
merkle-tree/trees/: tree_0.json
programs/merkle-distributor/: Cargo.toml  README.md
scripts/: DEPLOY_SCRIPTS.md  README.md  create-vanity-token.sh  deploy-common.sh  deploy-dfx.sh  deploy-if.sh  upload-trees.sh
scripts/deploy-merkle-trees/: README.md  deploy-common.sh  deploy-dfx.sh  deploy-if.sh  deploy-merkle-trees.md  dfx-config.example.json  fund-dfx.sh  fund-if.sh  if-markets.example.json  if-markets.mainnet.json  set-authorities-if.sh
scripts/upload-metadata/: README.md  (+3 more)
test/: requirements.txt
ts-sdk/: package.json
(+374 files in other folders)
