[package]
name = "bad-debt-example"
version = "0.1.0"
description = "Example program that owns bad debt and claims its DFX allocation from the merkle distributor via CPI"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bad_debt_example"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
# When adapting this example in your own repo, replace the path dependency with:
# merkle-distributor = { git = "https://github.com/drift-labs/multi-distributor", features = ["cpi"] }
merkle-distributor = { path = "../../../programs/merkle-distributor", features = ["cpi"] }
# Match the version the distributor program was built against (kept exact via Cargo.lock,
# see `cargo update -p solana-program --precise 1.16.16`).
solana-program = "1.16.16"
